--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "jalali-moment": "^3.3.2",
         "quill": "^1.3.6",
         "select2-bootstrap-theme": "0.1.0-beta.10",
+        "sweetalert2": "^8.15.3",
         "verte": "0.0.12",
         "vue-ckeditor2": "^2.1.5",
         "vue-color": "^2.7.0",
