--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "pion/laravel-chunk-upload": "^1.2",
         "spatie/laravel-permission": "^2.37"
     },
     "require-dev": {
